--- a/polish.html
+++ b/polish.html
@@ -12,7 +12,7 @@
 
 		<!-- Le styles -->
 		<link href="http://polish.7webpages.com/static/css/bootstrap.min.css" rel="stylesheet">
-		<link href="https://bootswatch.com/cosmo/bootstrap.min.css" rel="stylesheet">
+		<link href="https://bootswatch.com/yeti/bootstrap.min.css" rel="stylesheet">
 		<link href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" rel="stylesheet">
 		<!-- Custom styles for this template -->
 		<link href="sticky-footer.css" rel="stylesheet">
@@ -45,12 +45,15 @@
 		}
 		.search-area{
 			background: #CDCDCD;
+			height: 200px;
 		}
 		.signup-area{
 			background: rgb(60, 132, 226);
+			height: 200px;
 		}
 		.signup-area{
 			color: white;
+			
 		}
 		</style>
 		<!-- This file store project specific CSS -->
@@ -109,7 +112,7 @@
  -->
 
 		<!-- Static navbar -->
-		<nav class="navbar navbar-default custom-nav">
+		<nav class="navbar bg-default custom-nav">
 			<div class="container-fluid	">
 			  	<div class="navbar-header">
 			    	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -145,6 +148,7 @@
 	  				<h3>Leaving feedback for someone?</h3>
 	  				<input type="text">
 	  				<h3>Leaving feedback for some event?</h3>
+	  				<input type="text">
 	  			</div>
 	  		</div>
 
