reindent of code, current changes in sidebar

--- a/polish.html
+++ b/polish.html
@@ -18,12 +18,17 @@
 		<link href="./css/sticky-footer.css" rel="stylesheet">
 
 		<style>
+		.main-area{
+			padding-top:45px;
+		}
 			.btn-signup{
 				margin-bottom: 40px;
 				margin-top: 30px;
 			}
 			.custom-nav{
 				margin-bottom: 0px;
+				background-color: #f8f8f8;
+          		border-color: #e7e7e7;
 			}
 			.home-text p{
 				font-size: 1.2em;
@@ -84,7 +89,7 @@
 
 	<body>
 	  	<!-- Static navbar -->
-	  	<nav class="navbar bg-default custom-nav">
+	  	<nav class="navbar bg- navbar-fixed-top custom-nav">
 	  		<div class="container-fluid	">
 	  			<div class="navbar-header">
 	  				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -106,7 +111,7 @@
 	  	</nav>
 
 	  	<div class="container-fluid">
-	  		<div class="row text-center">
+	  		<div class="row text-center main-area">
 	  			<div class="col-md-6 signup-area">
 	  				<h3>The easiest and most effective way to
 	  					<br>	
